cdk-policies/security/restrict-image-registries/restrict-image-registries.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: validate-region
  labels:
    app: kyverno
  annotations:
    policies.kyverno.io/category: CDK Regional Policies for ECS
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      When managing containers within AWS ECS, it's crucial to enforce security measures to prevent unauthorized modifications.
      One significant aspect is ensuring the resources are deployed to the 'us-west-1' region. 
      This policy checks if ECS Containers are configured to be deployed in 'us-west-1'.
spec:
  rules:
    - name: validate-region
      match:
        all:
        - (values(Resources)[?Type == 'AWS::ECS::TaskDefinition'] | length(@) > `0`): true
      context:
      - name: allowedRegistries
        variable:
        - ecr.io
      assert:
        all:
        - message: ECS Containers should only be deployed in us-west-1 region.
          check:
            ~.(values(Resources)[?Type == 'AWS::ECS::TaskDefinition']):
                Properties:
                    ~.(ContainerDefinitions[]):
                        (Image)->img:
                            (length($allowedRegistries[?starts_with($img, @)]) > `0`): true
